--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 spring.jpa.open-in-view=false
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=lavanderiasLOL@gmail.com
+spring.mail.password=pmdyqreteiwfzdjc
+spring.mail.properties.mail.smtp.starttls.enable=true
+
